@@ -5,13 +5,6 @@ import android.media.ExifInterface;
 /**
  * Created by DELL on 29/07/2014.
  */
-/*
-dsasd
-sadasd
-test
-fsdafasd
-asfd
- */
 public class GeoDegree {
     private boolean valid = false;
     Double latitude, longitude;
@@ -47,21 +40,21 @@ public class GeoDegree {
         String[] DMS = stringDMS.split(",", 3);
 
         String[] stringD = DMS[0].split("/", 2);
-        Double D0 = new Double(stringD[0]);
-        Double D1 = new Double(stringD[1]);
-        Double FloatD = D0 / D1;
+        Double D0 = Double.valueOf(stringD[0]);
+        Double D1 = Double.valueOf(stringD[1]);
+        Double doubleD = D0 / D1;
 
         String[] stringM = DMS[1].split("/", 2);
-        Double M0 = new Double(stringM[0]);
-        Double M1 = new Double(stringM[1]);
-        Double FloatM = M0 / M1;
+        Double M0 = Double.valueOf(stringM[0]);
+        Double M1 = Double.valueOf(stringM[1]);
+        Double doubleM = M0 / M1;
 
         String[] stringS = DMS[2].split("/", 2);
-        Double S0 = new Double(stringS[0]);
-        Double S1 = new Double(stringS[1]);
-        Double FloatS = S0 / S1;
+        Double S0 = Double.valueOf(stringS[0]);
+        Double S1 = Double.valueOf(stringS[1]);
+        Double doubleS = S0 / S1;
 
-        result = new Double(FloatD + (FloatM / 60) + (FloatS / 3600));
+        result = doubleD + (doubleM / 60) + (doubleS / 3600);
 
         return result;
     }
